--- a/globals.css
+++ b/globals.css
@@ -92,7 +92,7 @@ a {
 
 @media (max-width: 480px) {
   .frame {
-    width: 1950px;
+    /* width: 1950px; */
   }
 
   .desktop .rectangle-8 {
@@ -128,6 +128,10 @@ a {
   .box{
     margin-left: 200px;
   }
+
+  body{
+    font-size: large;
+  }
 }
 
 .box{
@@ -135,3 +139,4 @@ width: 1048px;
 left: 20%;
 margin-left: 170px;
 }
+
