--- a/style.css
+++ b/style.css
@@ -1381,8 +1381,6 @@ body {
 
 .desktop .ellipse {
   position: fixed;
-  width: 70px;
-  height: 70px;
   top: 85%;
   left: 90%;
   background-color: #eeeeee0d;
@@ -1392,6 +1390,7 @@ body {
   backdrop-filter: blur(187px) brightness(100%);
   -webkit-backdrop-filter: blur(187px) brightness(100%);
   transform: translate(-50%, -50%);
+  transition: all 0.3s ease-in-out;
 }
 
 @keyframes rotate {
@@ -1414,13 +1413,12 @@ body {
 
 .desktop .whatsapp {
   position: fixed;
-  width: 46px;
-  height: 46px;
   top: 85%;
   left: 90%;
   object-fit: cover;
   transform: translate(-50%, -50%);
   animation: rotate .5s infinite;
+  transition: all 3.9s ease-in-out;
 }
 
 
