--- a/style.css
+++ b/style.css
@@ -1,13 +1,25 @@
+html{
+  height: 4000px;
+  max-width: 1900px;
+}
 body {
-  margin: 0;
+  margin: -100;
   padding: 0;
   background-color: #2e0327;
   overflow-x: hidden;
+  height: 4000px;
+  max-width: 1900px;
+  overflow: none;
+  
+  
+}
+.web{
+  height: 4000px;
+  max-width: 1900px;
 }
 
 .desktop .rectangle {
   width: 100%; /* Change width to 100% */
-  max-width: 1240px; /* Add max-width */
   height: auto; /* Change height to auto */
   top: 800px;
   left: 0;
@@ -66,12 +78,12 @@ body {
 
 .desktop .frame {
   position: absolute;
-  width: 1950px;
+  width: 1900px;
   height: 80px;
   top: 799px;
   left: 0;
   background-color: #eeeeee1a;
-  overflow: hidden;
+
   border-top-width: 1px;
   border-top-style: solid;
   border-bottom-width: 1px;
@@ -1187,7 +1199,7 @@ body {
 
 .desktop .rectangle-22 {
   position: absolute;
-  width: 1900px;
+  width: 2000px;
   height: 290px;
   top: 4677px;
   left: 0;
@@ -1621,3 +1633,5 @@ body {
       line-height: normal;
   }
 }
+
+
